<resources>
    <string name="app_name">Homework</string>
    <string name="test">I\'m just a little string</string>
    <string name="hw_info">Choose homework wisely</string>
    <string name="button_hw1">Homework 1</string>
    <string name="button_hw2">Homework 2</string>
    <string name="austria">Austria</string>
    <string name="poland">Poland</string>
    <string name="Italy">Italy</string>
    <string name="columbia">Columbia</string>
    <string name="madagascar">Madagascar</string>
    <string name="thailand">Thailand</string>
    <string name="denmark">Denmark</string>
    <string name="download_button">Download</string>
    <string name="ref_hint">Insert reference here</string>
    <string name="button_hw3">Homework 3</string>
    <string name="button_hw4">Homework 4</string>
    <string name="button_hw4_clock">Homework 4 clock</string>
    <string name="button_hw5">Homework 5</string>
    <string name="button_hw6">Homework 6</string>
    <string name="button_wi_fi_receiver">wi-fi status</string>
    <string name="turn_off_wi_fi">Turn off WiFi</string>
    <string name="turn_on_wi_fi">Turn on WiFi</string>
</resources>
