<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:textSize="24dp"
        android:textColor="#000000"
        android:text="@string/hw_info" />


    <Button
        android:id="@+id/button_hw1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_hw1" />

    <Button
        android:id="@+id/button_hw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_hw2" />

</LinearLayout>