<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/austria"
            android:textColor="#fff"
            android:textSize="16sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#d21010"
            android:orientation="horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#fff"
            android:orientation="horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#d21010"
            android:orientation="horizontal" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/poland"
            android:textColor="#fff"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#fff"
            android:orientation="horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#d21010"
            android:orientation="horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/Italy"
            android:textColor="#fff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="300">

            <View
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_weight="100"
                android:background="#1a9c34" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="100"
                android:background="#fff" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="100"
                android:background="#d21010" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/columbia"
            android:textColor="#fff"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#aaff00"
            android:orientation="horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#1711d7"
            android:orientation="horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#d21010"
            android:orientation="horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/madagascar"
            android:textColor="#fff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="80dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:background="#fff"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_marginEnd="10dp"
                    android:background="#d21010"
                    android:orientation="horizontal" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_marginEnd="10dp"
                    android:background="#4fab2b"
                    android:orientation="horizontal" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/thailand"
            android:textColor="#fff"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#d21010"
            android:orientation="horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#fff"
            android:orientation="horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#130854"
            android:orientation="horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#fff"
            android:orientation="horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#d21010"
            android:orientation="horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/denmark"
            android:textColor="#fff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="300">

            <View
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_weight="105"
                android:background="#d21010" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="130"
                android:background="#fff" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="65"
                android:background="#d21010" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#fff"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="300">

            <View
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_weight="105"
                android:background="#d21010" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="130"
                android:background="#fff" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="65"
                android:background="#d21010" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>